# rpi-platform

./: .gitignore  .rsyncignore  CMakeLists.txt  README.md  config.sh  reset.sh  run.sh  state-definition  state-definition.json  state-example.json  state-gen  upload  upload.sh
analysis/sensor/: analyzer.py
config/: .rsyncignore  app.service
frontend/: index.html  package.json
frontend/src/: Button.tsx  index.css  useServer.tsx
frontend/src/core/: server.ts  types.ts
main/: entry.c  main.c
main/core/include/algorithms/: mark.h  pid.h
main/core/include/ports/: output.h  timer.h
main/core/include/services/: drive.h  encoder.h  line.h  vsense.h
main/core/src/: state.c  state.h
main/core/src/algorithms/: mark.c  pid.c
main/core/src/services/: clock.c  drive.c  imu.c  line.c  music.c  radio.c  vsense.c
main/infra/: dev.c  log.c  motor.c  output.c
scripts/: motor-arx-data  state-gen
scripts/motor-tuning/: motor-arx.py
scripts/sensor/: algorithm-test.py
server/: app.js  robot.js  state-reader.js
src/: main.c
src-broaker/: app.js  robot.js  state-definition.json
src-main/: entry.c  main.c
src-main/core/: em.c  state.c  state.h
src-main/core/include/ports/: log.h
src-main/core/include/services/: line.h
src-main/core/interfaces/: drive-service.h  em.h  encoder.h  linalg.h  sensor-service.h
src-main/core/interfaces/services/: clock.h  drive.h  music.h  sensor.h
src-main/core/services/: clock.c  drive-service.c  drive.c  encoder.c  etc.c  imu-service.c  knob.c  music.c  sensor-service.c  sensor.c  vsense-service.c  vsense.c
src-main/core/src/services/: line.c  radio.c  sensor.c
src-main/infra/: dev.c  motor.c  output.c  timer.c
src-ui/: index.html  package-lock.json
src-ui/src/: App.tsx  Card.tsx
src-ui/src/core/: server.ts  types.ts
src/core/: dev.c  dev.h  log.c  motor.h
src/core/interfaces/: dev.h  drive-service.h  imu-service.h  keyboard-service.h  knob-service.h  linalg.h  log.h  music-service.h  radio-service.h  sensor-service.h  timer.h  vsense-service.h
src/core/services/: drive-service.c  keyboard-service.c  knob-service.c  log.c  music-service.c  radio-service.c  sensor-service.c  vsense-service.c
src/infra/: dev.c  linalg.c  motor.c  timer.c
src/motor/: encoder.c  motor.c
src/ui/: app.js  package-lock.json  package.json
src/ui/public/: index.html
tests/sensor/: analyzer.py
